[project]
name = "leashmap-server"
version = "0.1.0"
description = "LeashMap Cloud — MVP FastAPI server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sse-starlette>=2.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "tzdata>=2024.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["leashmap*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
