[project]
name = "leashmap-sim"
version = "0.1.0"
description = "LeashMap device simulator — drives the cloud over HTTP without hardware"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
leashmap-sim = "leashmap_sim.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["leashmap_sim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
